--- a/index.html
+++ b/index.html
@@ -4,20 +4,45 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <link rel="stylesheet" href="master.css">
   <link rel="stylesheet" href="/views/home/style.css">
-  <title>Document</title>
-</head>
+  <link rel="stylesheet" href="/views/forum/forum-style.css">
+  <title>Rhapsody Festival | Easter NC</title></head>
 <body ng-controller='homeCtrl'>
+  <div id="nav">
+    <a href="/">
+      <img src="./images/logo.png" alt="Home logo">
+    </a>
 
 
-  {{service}}
 
-  <a href="./views/forum/forum.html">link to forum!</a>
+
+    <div class="grab">
+      <div class="bars">
+        <div class="bar bar1"></div>
+        <div class="bar bar2"></div>
+        <div class="bar bar3"></div>
+      </div>
+    </div>
+  </div>
+
+
+
+
+
+
+
+  <div style="height: 50px"></div>
+  <ui-view></ui-view>
+
+
+
 </body>
 
 
 
 <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.4.3/angular.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/angular-ui-router/0.2.15/angular-ui-router.js"></script>
 <script src="app.js"></script>
 <script src="controller.js"></script>
 <script src="service.js"></script>
