recursive directive working

--- a/public/index.html
+++ b/public/index.html
@@ -31,8 +31,14 @@
         <div ui-sref="forum" class="menuItem">
           <p>FORUM</p>
         </div>
-        <div class="menuItem">
-          <p>INFO</p>
+        <div ui-sref="prepare" class="menuItem">
+          <p>PREPARE</p>
+        </div>
+        <div ui-sref="principles" class="menuItem">
+          <p>PRINCIPLES</p>
+        </div>
+        <div ui-sref="fire" class="menuItem">
+          <p>FIRE</p>
         </div>
 
     </div>
@@ -62,7 +68,13 @@
       <a ui-sref="forum" ng-click="togglemenu()"><p>RHAPHORUM</p></a>
     </div>
     <div class="mobile-menu-row">
-      <a ui-sref="forum" ng-click="togglemenu()"><p>INFO</p></a>
+      <a ui-sref="prepare" ng-click="togglemenu()"><p>PREPARE</p></a>
+    </div>
+    <div class="mobile-menu-row">
+      <a ui-sref="principles" ng-click="togglemenu()"><p>PRINCIPLES</p></a>
+    </div>
+    <div class="mobile-menu-row">
+      <a ui-sref="fire" ng-click="togglemenu()"><p>FIRE</p></a>
     </div>
   </div>
 
@@ -107,7 +119,7 @@
 <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.10.6/moment.min.js"></script>
 <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.18.1/locale/af.js"></script> -->
 <!-- <script scr="https://cdnjs.cloudflare.com/ajax/libs/angular-moment/1.0.1/angular-moment.js"></script> -->
-
+<script src="https://use.fontawesome.com/983040db07.js"></script>
 
 <script src="./dist/all.js"></script>
 
