adding event functionality

--- a/public/index.html
+++ b/public/index.html
@@ -38,6 +38,9 @@
         <div ui-sref="forum" class="menuItem">
           <p>FORUM</p>
         </div>
+        <div ui-sref="events" class="menuItem">
+          <p>EVENTS</p>
+        </div>
         <div ui-sref="prepare" class="menuItem">
           <p>PREPARE</p>
         </div>
@@ -73,6 +76,9 @@
     </div>
     <div class="mobile-menu-row">
       <a ui-sref="forum" ng-click="togglemenu()"><p>RHAPHORUM</p></a>
+    </div>
+    <div class="mobile-menu-row">
+      <a ui-sref="events" ng-click="togglemenu()"><p>EVENTS</p></a>
     </div>
     <div class="mobile-menu-row">
       <a ui-sref="prepare" ng-click="togglemenu()"><p>PREPARE</p></a>
